# dbus-client-server

./: CMakeLists.txt  Concatenator.cpp  main_concatenated.cpp  main_concatenator.cpp
dbus_schemas/: concatenator-client.h  concatenator-server.h  concatenator_schema.xml
includes/: Concatenated.h  Concatenator.h
